--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1,3 +1,3 @@
 en:
   site_settings:
-    modal_url: 'URL to receive the content for the help window'
+    modal_url: 'URL to receive the content for the help window. Be sure to create the topic in a location that everyone has access to it.'
