Added the stylesheet for the new button in the composer Altered the setting names again

--- a/config/locales/server.ru.yml
+++ b/config/locales/server.ru.yml
@@ -1,4 +1,4 @@
 ru:
   site_settings:
-    composerhelp_enabled: 'composer help enabled'
-    composerhelp_modal_url: 'URL содержимого модального окна. Удостоверьтесь, что вы создали доступную для всех тему.'
+    composer_help_enabled: 'Show help button on composer window?'
+    composer_help_modal_url: 'URL содержимого модального окна. Удостоверьтесь, что вы создали доступную для всех тему.'
