--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -1,5 +1,7 @@
 en:
   js:
+    composer:
+      composer_help_button_title:  "Composer Help"
     composer_help:
       button_text: "Composer Help"
       title: "Composer Help"
